# nabu_nisaba

./: .gitignore  .mcp.json  KNOWN_ISSUES.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_request_modifier_trace.py
.claude/: settings.json
.dev_docs/: dev.dump.md
.nisaba/: augments_state.json  file_windows.md  file_windows_state.json  last_session_transcript.md  mcp_servers.json  modified_context.json  nisaba_composed_augments.md  notifications.md  notifications_checkpoint.json  status_bar_live.txt  structural_view.md  structural_view_state.json  system_prompt.md  tool_result_windows.md  tool_result_windows_state.json  workspace.md
.nisaba/augments/__base/: 000_universal_symbolic_compression.md  001_compressed_workspace_paradigm.md  001_workspace_paradigm.md  002_compressed_environment_mechanics.md  002_environment_mechanics.md  003_compressed_workspace_operations.md  003_workspace_operations.md  004_workspace_navigation.md  005_editor.md
.nisaba/augments/architecture/: boundary_validation.md  coupling_analysis.md  inheritance_analysis.md  layer_detection.md
.nisaba/augments/code_analysis/: call_graph.md  complexity_hotspots.md
.nisaba/augments/code_quality/: code_smells.md  complexity_hotspots.md  dead_code_detection.md  duplication_analysis.md
.nisaba/augments/dead_code_detection/: find_unreferenced_callables.md
.nisaba/augments/dev_mode_architecture_reference/: augmentation_subsystem_architecture.md  context_compression_system.md  file_windows_tui_architecture.md  mcp_server_discovery.md  nisaba_tool_implementation.md  nisaba_unified_proxy_mcp.md  system_prompt_injection_legitimacy.md  tui_frames_architecture.md  workspace_files_singleton.md
.nisaba/augments/documentation/: doc_gaps.md
.nisaba/augments/foundation/: call_graph_analysis.md  (+8 more)
.nisaba/tui/: augment_state.json  augment_view.md  compacted_transcript.md  core_system_prompt.md  editor_tui.json  editor_view.md  notification_state.json  notification_view.md  status_bar_live.txt  structural_view.md  structural_view_state.json  system_prompt.md  todo_view.md
docs/: NONLINEAR_CONSENSUS.md  PROMPT_STRUCTURE.md
docs/transcripts/: audhd_system_model.md  augment_wording.md  context_tokenization.md  gaps_and_drives.md  geometry_aligment_mainfold_article.txt  geometry_alignment.md  mainfold_geometry_framework.md  mainfold_geometry_framework_full.md  symbolic_compression.md  system_prompt.md  usage_example__bugfixing.md  usage_example__long_files.md  ux_work_and_status_bar.md  ux_work_and_status_bar.txt
scripts/: precompact_extract.py  workspace-status
src/nabu/: README.md  __init__.py  main.py
src/nisaba/: README.md  __init__.py  agent.py  augments.py  cli.py  cli_utils.py  config.py  documentation.py  factory.py  guidance.py  markers.py  mcp_registry.py  registry.py  schema_utils.py  structured_file.py  templates.py  tool.py  workspace_files.py
(+208 files in other folders)
